# depin-settlement

./: Cargo.toml  Makefile  README.md  plan.md
.github/workflows/: ci.yml
contracts/mock-oracle/: Cargo.toml
contracts/mock-oracle/src/: lib.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  test.rs
contracts/settlement/test_snapshots/test/: test_balance_multiple_deposits.1.json  test_deposit.1.json  test_full_payout_cycle.1.json  test_get_nonexistent_node.1.json  test_initialize.1.json  test_initialize_twice.1.json  test_multiple_oracle_reports.1.json  test_reentrancy_guard_clears_after_successful_report.1.json  test_reentrancy_rejected.1.json  test_register_node.1.json  test_register_node_unauthorized.1.json  test_submit_oracle_report_above_threshold.1.json  test_submit_oracle_report_below_threshold.1.json  test_submit_oracle_report_zero_uptime.1.json  test_unverified_oracle_report.1.json
