[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
mock-oracle = { path = "../mock-oracle" }

[features]
testutils = ["soroban-sdk/testutils"]
